--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ body {
 }
 
 .sketchpad {
-    background-color: black;
     min-height: 80vh;
     min-width: 85vw;
     display: grid;
+    /* Gives inner border for squares inside sketchpad */
     gap: 1px;
+    background-color: black;
 }
 
 .sketchpad div {
