--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 .sketchpad {
     min-height: 80vh;
-    width: 85vw;
+    width: 60vw;
     display: grid;
     margin: 0 auto 0;
     /* Gives inner border for squares inside sketchpad */
@@ -40,6 +40,12 @@ body {
 .bottom {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.bottom-center {
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
