--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    color: lemonchiffon;
     background-color: firebrick;
     height: 100vh;
     margin: 0;
@@ -11,7 +12,6 @@ body {
 }
 
 .top {
-    color: lemonchiffon;
     font-family: 'Tangerine', cursive;
     font-size: 1.5rem;
     display: flex;
@@ -47,7 +47,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 10%;
+    height: 100%;
 }
+
+
 
 .knob {
     background-color: white;
