--- a/style.css
+++ b/style.css
@@ -25,8 +25,12 @@ body {
     display: grid;
     margin: 0 auto 0;
     /* Gives inner border for squares inside sketchpad */
-    gap: 1px;
+    gap: 0;
     background-color: black;
+}
+
+.sketchpad-gridlines {
+    gap: 1px;
 }
 
 .sketchpad>div {
